--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,608 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+  id="home"
+>
+  <!-- #region head -->
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/icons/favicon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <script src="scripts/main.js"></script>
+  </head>
+  <!-- #endregion -->
+  <body class="page__body">
+    <div class="page__content">
+      <!-- #region header -->
+      <header class="header">
+        <div class="top-bar">
+          <a
+            href="#menu"
+            class="icon icon--burger-menu link"
+          ></a>
+
+          <div class="top-bar__text-logo">
+            NA
+            <br />
+            MU
+          </div>
+        </div>
+      </header>
+      <!-- #endregion -->
+
+      <section class="museum">
+        <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <a
+          href="#actual-events"
+          class="museum__side-sign link"
+        >
+          <div class="museum__side-sign--line"></div>
+
+          <div class="museum__side-sign--tag">ПОДІЇ</div>
+        </a>
+
+        <div class="button museum__button">
+          <div class="button__text-block">
+            <p class="button__text">КВИТКИ</p>
+          </div>
+
+          <div class="button__link-block museum__link-block">
+            <a
+              href="#actual-events"
+              class="icon icon--right-arrow"
+            ></a>
+          </div>
+        </div>
+      </section>
+      <!-- #region aside -->
+      <aside
+        class="menu page__menu"
+        id="menu"
+      >
+        <div class="menu__content">
+          <!-- #region top-bar -->
+          <div class="menu__top-bar">
+            <a
+              href="#home"
+              class="icon icon--close link"
+            ></a>
+
+            <div class="menu__groups">
+              <div class="menu__group">
+                <a
+                  href="#gallery"
+                  class="link link--title menu__group--link"
+                >
+                  Галерея
+                </a>
+
+                <a
+                  href="#actual-events"
+                  class="link link--title menu__group--link"
+                >
+                  Виставки та події
+                </a>
+              </div>
+
+              <div class="menu__group">
+                <a
+                  href="#newsletter"
+                  class="link link--title menu__group--link"
+                >
+                  Про Нас
+                </a>
+
+                <a
+                  href="#contacts"
+                  class="link link--title menu__group--link"
+                >
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- #endregion -->
+
+          <div class="menu__split-line"></div>
+
+          <!-- #region schedule -->
+          <div class="menu__schedule menu__text">
+            <p class="menu__title">Графік роботи</p>
+
+            <div class="menu__week">
+              <div class="menu__days">
+                <div class="menu__day">
+                  <div class="menu__time menu__text--bold">12:00 — 20:00</div>
+
+                  <p class="menu__day--name">середа</p>
+                </div>
+
+                <div class="menu__day">
+                  <div class="menu__time menu__text--bold">12:00 — 20:00</div>
+
+                  <p class="menu__day--name">четвер</p>
+                </div>
+
+                <div class="menu__day">
+                  <div class="menu__time menu__text--bold">12:00 — 20:00</div>
+
+                  <p class="menu__day--name">п’ятниця</p>
+                </div>
+
+                <div class="menu__day">
+                  <div class="menu__time menu__text--bold">11:00 — 19:00</div>
+
+                  <p class="menu__day--name">субота</p>
+                </div>
+
+                <div class="menu__day">
+                  <div class="menu__time menu__text--bold">11:00 — 19:00</div>
+
+                  <p class="menu__day--name">неділя</p>
+                </div>
+              </div>
+
+              <div class="menu__info">
+                <div class="menu__weekends">
+                  <p class="menu__text--bold">Вихідні:</p>
+
+                  <p class="menu__text">понеділок, вівторок</p>
+                </div>
+
+                <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
+            </div>
+          </div>
+          <!-- #endregion -->
+        </div>
+      </aside>
+      <!-- #endregion -->
+
+      <!-- #region main -->
+      <main class="main">
+        <!-- #region actual -->
+        <section
+          class="actual"
+          id="actual-events"
+        >
+          <div class="actual__title-block">
+            <a
+              href="#actual-events"
+              class="link link--title actual__title"
+            >
+              <h2 class="section__title">Актуальні події</h2>
+            </a>
+          </div>
+
+          <div class="actual__content">
+            <!-- #region first event -->
+            <article class="exhibition">
+              <div class="exhibition__photo">
+                <img
+                  src="images/exhibitions/exhibition-1.png"
+                  alt="exhibition 1 picture"
+                  class="exhibition__img"
+                />
+              </div>
+
+              <div class="exhibition__content">
+                <div class="exhibition__info">
+                  <div class="exhibition__type">ВИСТАВКА</div>
+
+                  <div class="exhibition__dates">26.08-29.11.2019</div>
+                </div>
+
+                <div class="exhibition__title-block">
+                  <a
+                    href="#exhibition-page"
+                    class="link link--title"
+                  >
+                    <p class="exhibition__title">Йду i повертаюсь</p>
+                  </a>
+
+                  <div class="icon__block icon__block--red"></div>
+                </div>
+
+                <p class="exhibition__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <!-- #endregion -->
+
+            <!-- #region second event -->
+            <article class="exhibition">
+              <div class="exhibition__photo">
+                <img
+                  src="images/exhibitions/exhibition-2.png"
+                  alt="exhibition 2 picture"
+                  class="exhibition__img"
+                />
+              </div>
+
+              <div class="exhibition__content">
+                <div class="exhibition__info">
+                  <div class="exhibition__type">ВИСТАВКА</div>
+
+                  <div class="exhibition__dates">26.08-29.11.2019</div>
+                </div>
+
+                <div class="exhibition__title-block">
+                  <a
+                    href="#exhibition-page"
+                    class="link link--title"
+                  >
+                    <p class="exhibition__title">I спогади i мрії</p>
+                  </a>
+
+                  <div class="icon__block icon__block--red"></div>
+                </div>
+
+                <p class="exhibition__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+                </p>
+              </div>
+            </article>
+            <!-- #endregion -->
+          </div>
+        </section>
+        <!-- #endregion -->
+
+        <!-- #region lection -->
+        <section class="lection">
+          <div class="lection__photo-block">
+            <img
+              src="images/exhibitions/exhibition-3.png"
+              alt="lection cover image"
+              class="lection__img"
+            />
+          </div>
+
+          <div class="lection__card-block">
+            <div class="lection__info">
+              <div class="lection__type">ЛЕКЦІЯ</div>
+
+              <div class="lection__dates">26/08/2019 - 11:00</div>
+            </div>
+
+            <div class="lection__title-block">
+              <a
+                href="#exhibition-page"
+                class="link link--title"
+              >
+                <p class="lection__title">Від класицизму до романтизму</p>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion -->
+
+        <!-- #region gallery -->
+        <section
+          class="gallery"
+          id="gallery"
+        >
+          <div class="gallery__title-block">
+            <a
+              href="#section-page"
+              class="link link--title"
+            >
+              <h2 class="section__title">Галерея</h2>
+            </a>
+          </div>
+
+          <div class="gallery__content">
+            <a
+              href="#gallery-photo-page"
+              class="gallery__photo gallery__photo--photo-1"
+            >
+              <img
+                src="./images/gallery/gallery-1.png"
+                alt="gallery photo 1"
+                class="gallery__img"
+              />
+            </a>
+
+            <a
+              href="#gallery-photo-page"
+              class="gallery__photo gallery__photo--photo-2"
+            >
+              <img
+                src="./images/gallery/gallery-2.png"
+                alt="gallery photo 2"
+                class="gallery__img"
+              />
+            </a>
+
+            <a
+              href="#gallery-photo-page"
+              class="gallery__photo gallery__photo--photo-3"
+            >
+              <img
+                src="./images/gallery/gallery-3.png"
+                alt="gallery photo 3"
+                class="gallery__img"
+              />
+            </a>
+
+            <a
+              href="#gallery-photo-page"
+              class="gallery__photo gallery__photo--photo-4"
+            >
+              <img
+                src="./images/gallery/gallery-4.png"
+                alt="gallery photo 4"
+                class="gallery__img"
+              />
+            </a>
+
+            <a
+              href="#gallery-photo-page"
+              class="gallery__photo gallery__photo--photo-5"
+            >
+              <img
+                src="./images/gallery/gallery-5.png"
+                alt="gallery photo 5"
+                class="gallery__img"
+              />
+            </a>
+          </div>
+
+          <div class="gallery__carousel"></div>
+        </section>
+        <!-- #endregion -->
+
+        <!-- #region newsletter -->
+        <section
+          class="newsletter"
+          id="newsletter"
+        >
+          <div class="newsletter__content">
+            <div class="newsletter__title-block">
+              <h2 class="section__title newsletter__title">Підписка</h2>
+
+              <p class="newsletter__description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
+
+            <div class="button newsletter__button">
+              <form
+                action="post-request"
+                class="newsletter__form"
+              >
+                <input
+                  type="email"
+                  id="email"
+                  placeholder=" "
+                  class="newsletter__input"
+                  required
+                />
+
+                <label
+                  for="email"
+                  class="newsletter__label"
+                >
+                  E-mail
+                </label>
+
+                <button
+                  type="submit"
+                  class="button__link-block newsletter__link-block"
+                >
+                  <div class="icon icon--right-arrow-black"></div>
+                </button>
+              </form>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion -->
+      </main>
+      <!-- #endregion -->
+
+      <!-- #region footer -->
+      <footer class="footer">
+        <div class="footer__content">
+          <!-- #region footer icons -->
+          <div class="footer__icon-block">
+            <a
+              href="#home"
+              class="link footer__link"
+            >
+              <p class="footer__text-logo">
+                NA
+                <br />
+                MU
+              </p>
+            </a>
+
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="icon icon--facebook link"
+                target="_blank"
+              ></a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="icon icon--insta link"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <!-- #endregion -->
+
+          <!-- #region footer schedule -->
+          <div class="footer__section footer__schedule">
+            <div class="footer__section-title">Графік роботи</div>
+
+            <div class="footer__text">
+              <!-- <div class="footer__dates"> -->
+              <div class="footer__day">
+                <p class="footer__text--bold">12:00 — 20:00</p>
+
+                <p class="footer__date">середа</p>
+              </div>
+
+              <div class="footer__day">
+                <p class="footer__text--bold">12:00 — 20:00</p>
+
+                <p class="footer__date">четвер</p>
+              </div>
+
+              <div class="footer__day">
+                <p class="footer__text--bold">12:00 — 20:00</p>
+
+                <p class="footer__date">п’ятниця</p>
+              </div>
+
+              <div class="footer__day">
+                <p class="footer__text--bold">11:00 — 19:00</p>
+
+                <p class="footer__date">субота</p>
+              </div>
+
+              <div class="footer__day">
+                <p class="footer__text--bold">11:00 — 19:00</p>
+
+                <p class="footer__date">неділя</p>
+              </div>
+
+              <br />
+
+              <p class="footer__text--bold">Вихідні:</p>
+
+              <p>понеділок, вівторок</p>
+
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+              <!-- </div> -->
+            </div>
+          </div>
+          <!-- #endregion -->
+
+          <!-- #region footer contacts -->
+          <div
+            class="footer__section footer__contacts"
+            id="contacts"
+          >
+            <div class="footer__section-title">Контакти:</div>
+
+            <div class="footer__text">
+              <a
+                href="https://maps.app.goo.gl/XcXrPAZfDBDzcgkPA"
+                class="footer__link link link--title"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel: +38 (044) 278-13-57"
+                class="footer__link link link--title"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="tel: +38 (044) 278-74-54"
+                class="footer__link link link--title"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a
+                href="mailto: info@namu.kiev.ua"
+                class="footer__link link link--title"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+          <!-- #endregion -->
+
+          <div class="footer__split-line">
+            <div class="footer__anchor">
+              <a
+                href="#home"
+                class="icon icon--arrow-up"
+              ></a>
+            </div>
+          </div>
+
+          <!-- #region footer links -->
+          <div class="footer__links-block">
+            <div class="footer__group footer__group--group-1">
+              <a
+                href="#gallery"
+                class="link"
+              >
+                Галерея
+              </a>
+
+              <a
+                href="#actual-events"
+                class="link"
+              >
+                Виставки та події
+              </a>
+            </div>
+
+            <div class="footer__group footer__group--group-2">
+              <a
+                href="#newsletter"
+                class="link"
+              >
+                Про Нас
+              </a>
+
+              <a
+                href="#contacts"
+                class="link"
+              >
+                Контакти
+              </a>
+            </div>
+          </div>
+          <!-- #endregion -->
+
+          <div class="footer__copyright">
+            <p>Designed by Zhyriada Marina</p>
+
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </footer>
+      <!-- #endregion -->
+    </div>
   </body>
 </html>
