--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,7 @@
                 <input
                   type="email"
                   id="email"
-                  placeholder=" "
+                  placeholder=""
                   class="newsletter__input"
                   required
                 />
@@ -557,6 +557,12 @@
                 class="icon icon--arrow-up"
               ></a>
             </div>
+            <!-- <div class="footer__anchor">
+              <a
+                href="#home"
+                class="icon icon--arrow-up"
+              ></a>
+            </div> -->
           </div>
 
           <!-- #region footer links -->
