--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
             class="icon icon--burger-menu link"
           ></a>
 
-          <div class="top-bar__text-logo">
+          <a class="link top-bar__text-logo" href="#home">
             NA
             <br />
             MU
-          </div>
+          </a>
         </div>
       </header>
       <!-- #endregion -->
@@ -400,6 +400,7 @@
               <form
                 action="post-request"
                 class="newsletter__form"
+                onsubmit="this.reset(); return false;"
               >
                 <input
                   type="email"
