fixed Header typo, fixed cursors, fixed subscribe section as per mock-up

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                     href="#galery"
                     class="menu__nav-list-link"
                   >
-                    Гелерея
+                    Галерея
                   </a>
                 </li>
 
@@ -272,7 +272,10 @@
                   </h5>
                 </div>
 
-                <div class="section__article-title">
+                <a
+                  class="section__article-title"
+                  href="#"
+                >
                   <h3>
                     І спогади і мрії
                   </h3>
@@ -282,7 +285,7 @@
                     alt="rect-red"
                     class="section__article-title-red-rect"
                   >
-                </div>
+                </a>
 
                 <p class="section__article-body">
                   Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
@@ -313,9 +316,14 @@
                 </h5>
               </div>
 
-              <h3 class="section__lectures-info-title">
-                Від класицизму до романтизму
-              </h3>
+              <a
+                href="#"
+                class="section__lecture-info-title-link"
+              >
+                <h3 class="section__lectures-info-title">
+                  Від класицизму до романтизму
+                </h3>
+              </a>
             </div>
           </div>
         </div>
