--- a/src/index.html
+++ b/src/index.html
@@ -405,17 +405,10 @@
                 <input
                   type="email"
                   id="email"
-                  placeholder=""
+                  placeholder="E-mail"
                   class="newsletter__input"
                   required
                 />
-
-                <label
-                  for="email"
-                  class="newsletter__label"
-                >
-                  E-mail
-                </label>
 
                 <button
                   type="submit"
