--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="../src/styles/main.scss"
     />
     <link
       rel="preconnect"
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <script src="scripts/main.js"></script>
+    <script src="../src/scripts/main.js"></script>
   </head>
   <!-- #endregion -->
   <body class="page__body">
