--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="images/icons/favicon.png"
+      href="../src/images/icons/favicon.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@100..900&display=swap"
@@ -205,7 +205,7 @@
             <article class="exhibition">
               <div class="exhibition__photo">
                 <img
-                  src="images/exhibitions/exhibition-1.png"
+                  src="../src/images/exhibitions/exhibition-1.png"
                   alt="exhibition 1 picture"
                   class="exhibition__img"
                 />
@@ -242,7 +242,7 @@
             <article class="exhibition">
               <div class="exhibition__photo">
                 <img
-                  src="images/exhibitions/exhibition-2.png"
+                  src="../src/images/exhibitions/exhibition-2.png"
                   alt="exhibition 2 picture"
                   class="exhibition__img"
                 />
@@ -282,7 +282,7 @@
         <section class="lection">
           <div class="lection__photo-block">
             <img
-              src="images/exhibitions/exhibition-3.png"
+              src="../src/images/exhibitions/exhibition-3.png"
               alt="lection cover image"
               class="lection__img"
             />
@@ -327,7 +327,7 @@
               class="gallery__photo gallery__photo--photo-1"
             >
               <img
-                src="./images/gallery/gallery-1.png"
+                src="../src/images/gallery/gallery-1.png"
                 alt="gallery photo 1"
                 class="gallery__img"
               />
@@ -338,7 +338,7 @@
               class="gallery__photo gallery__photo--photo-2"
             >
               <img
-                src="./images/gallery/gallery-2.png"
+                src="../src/images/gallery/gallery-2.png"
                 alt="gallery photo 2"
                 class="gallery__img"
               />
@@ -349,7 +349,7 @@
               class="gallery__photo gallery__photo--photo-3"
             >
               <img
-                src="./images/gallery/gallery-3.png"
+                src="../src/images/gallery/gallery-3.png"
                 alt="gallery photo 3"
                 class="gallery__img"
               />
@@ -360,7 +360,7 @@
               class="gallery__photo gallery__photo--photo-4"
             >
               <img
-                src="./images/gallery/gallery-4.png"
+                src="../src/images/gallery/gallery-4.png"
                 alt="gallery photo 4"
                 class="gallery__img"
               />
@@ -371,7 +371,7 @@
               class="gallery__photo gallery__photo--photo-5"
             >
               <img
-                src="./images/gallery/gallery-5.png"
+                src="../src/images/gallery/gallery-5.png"
                 alt="gallery photo 5"
                 class="gallery__img"
               />
