--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="../src/styles/main.scss"
+      href="styles/main.scss"
     />
     <link
       rel="preconnect"
@@ -27,13 +27,13 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../src/images/icons/favicon.png"
+      href="images/icons/favicon.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <script src="../src/scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
   </head>
   <!-- #endregion -->
   <body class="page__body">
