--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="./styles/main.scss"
     />
     <link
       rel="preconnect"
