fixed horisontal scroll, by redesigning galery with grid and dynamic sizing

--- a/src/index.html
+++ b/src/index.html
@@ -340,45 +340,41 @@
             </h2>
           </div>
 
-          <div
-            class="swiper"
-            id="swiper"
-          >
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img
-                  src="./images/galery-carousel/car1.png"
-                  alt="img"
-                >
+          <div class="section__galery-swiper-cont">
+            <div
+              class="swiper"
+              id="swiper"
+            >
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    src="./images/galery-carousel/car1.png"
+                    alt="img"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/galery-carousel/car9.png"
+                    alt="img"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/galery-carousel/car3.png"
+                    alt="img"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/galery-carousel/car4.png"
+                    alt="img"
+                  >
+                </div>
               </div>
-
-              <div class="swiper-slide">
-                <img
-                  src="./images/galery-carousel/car2.png"
-                  alt="img"
-                >
-              </div>
-
-              <div class="swiper-slide">
-                <img
-                  src="./images/galery-carousel/car3.png"
-                  alt="img"
-                >
-              </div>
-
-              <div class="swiper-slide">
-                <img
-                  src="./images/galery-carousel/car4.png"
-                  alt="img"
-                >
-              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
             </div>
-
-            <div class="swiper-pagination"></div>
-
-            <div class="swiper-button-prev"></div>
-
-            <div class="swiper-button-next"></div>
           </div>
         </div>
       </section>
