--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -5,10 +6,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NAMU</title>
+  <link rel="icon" type="image/x-icon" href="./images/NAMU-logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="auto" />
   <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./styles/main.scss" />
 </head>
@@ -119,8 +121,8 @@
           <div class="exhibition-card">
             <a class="exhibition-card__link" href="#">
               <picture>
-                <!-- <source media="(min-width:1280px)" srcset="./images/exhibition-1desktop.png"" /> -->
-                <img class="exhibition-card__img" src="./images/exhibition-1.png" alt="exhibition__img" />
+                <source media="(min-width:1280px)" srcset="./images/exhebition-1desktop.png"" />
+                <img class=" exhibition-card__img" src="./images/exhibition-1.png" alt="exhibition__img" />
               </picture>
             </a>
             <div class="exhibition-card__date sub-title">11.07 - 22.09</div>
@@ -139,7 +141,7 @@
           <div class="exhibition-card">
             <a class="exhibition-card__link" href="#">
               <picture>
-                <!-- <source media="(min-width:1280px)" srcset="/src/images/exhebition-2desktop.png" /> -->
+                <source media="(min-width:1280px)" srcset="./images/exhebition-2desktop.png" />
                 <img class="exhibition-card__img" src="./images/exhibition-2.png" alt="exhibition__img" />
               </picture>
             </a>
@@ -257,7 +259,7 @@
             Першими дізнавайтесь про новини музею та розіграші, отримуйте
             запрошення на події та читайте статті від кураторів
           </p>
-          <form class="form subscribe__form" action="#" method="post" id="form">
+          <form onsubmit="this.reset(); return false;" class="form subscribe__form" action="#" method="post" id="form">
             <input class="email subscribe__email" type="email" id="email"
               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="e-mail" required />
           </form>
@@ -333,7 +335,7 @@
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#events">
-                 Події
+                  Події
                 </a>
               </li>
               <li class="nav__item">
@@ -360,3 +362,4 @@
 </body>
 
 </html>
+
